--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: default
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email fade">hey@emilylavinskas.ca</a>
             </div>
             <div class="contact-icons">
-                <a href="http://behance.net/emilycmyk"><img class="sm-icon fade" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
+                <a href="http://behance.net/emilylavinskas"><img class="sm-icon fade" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
                 <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon fade" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
                 <a href="http://instagram.com/emlav.design"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
             </div>
